<package>
  <name>servo_gazebo</name>
  <version>0.1.0</version>
  <description>servo_gazebo</description>
  <maintainer email="gaurav07@iitkgp.ac.in">Gaurav Suryawanshi</maintainer>

  <license>TODO</license>

  <url type="website">http://gazebosim.org/w/index.php?title=Tutorials/1.9/Using_A_URDF_In_Gazebo</url>
  <url type="bugtracker">https://github.com/osrf/gazebo_ros_demos/issues</url>
  <url type="repository">https://github.com/osrf/gazebo_ros_demos</url>

  <author email="gaurav07@iitkgp.ac.in">Gaurav Suryawanshi</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>servo_control</run_depend>
  <run_depend>servo_description</run_depend>
  <run_depend>xacro</run_depend>

  <export>
  </export>
</package>
